force-app/main/default/objects/Entitlement/fields/PM_Creation_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>PM_Creation_Lead_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days before the PM due date that the Work Order may be generated.</description>
    <label>PM Creation Lead Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>