force-app/main/default/objects/Entitlement/fields/PM_Generation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PM_Generation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies this Asset and Service Contract entitlement as eligible for preventive-maintenance generation.</description>
    <label>PM Generation Enabled</label>
    <type>Checkbox</type>
</CustomField>