force-app/main/default/objects/Entitlement/fields/PM_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>PM_Interval_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days between preventive-maintenance due dates under this entitlement.</description>
    <inlineHelpText>Enter a positive whole number of days.</inlineHelpText>
    <label>PM Interval Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>